banner, about-me, skills sections

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
+
+body {
+    font-family: 'Livvic', sans-serif;
+    background: #1d1d1d;
+}
+a {
+    color: #08fdd8 !important;
+}
