skills section and my work

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,6 +3,7 @@
     font-family: 'Livvic', sans-serif;
     min-height: 100vh;
     padding: 10% 0;
+    padding-bottom: 5%;
     background-color: #1d1d1d;
     color: #ffffff;
     .title-row {
