--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -3,6 +3,7 @@
     font-family: 'Livvic', sans-serif;
     min-height: 100vh;
     padding: 10% 0;
+    padding-bottom: 5%;
     background-color: #1d1d1d;
     color: #ffffff;
     .title-row {
@@ -17,8 +18,8 @@
 }
 #skillscanvas {
     position: absolute;
-    left: 155vh;
-    top: 195vh;
+    left: 995px;
+    top: 210vh;
     background-color: transparent;
     outline: none;
 }
