contact and navbar components, work section projects

--- a/src/app/landing-banner/landing-banner.component.html
+++ b/src/app/landing-banner/landing-banner.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" id="home">
     <div class="info">
         <h1 class="name">{{typewriter_display }}</h1>
         <div class="box-area">
