--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,6 @@
+<app-navbar class="sticky-top d-block"></app-navbar>
 <app-landing-banner></app-landing-banner>
 <app-about-me></app-about-me>
 <app-skills></app-skills>
 <app-my-work></app-my-work>
+<app-contact></app-contact>
