--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -1,4 +1,4 @@
-<div class="my-work" id="my-work">
+<div class="my-work" id="work">
     <div class="row">
         <div class="col-md-12">
             <h1 class="title">My work</h1>
@@ -7,76 +7,25 @@
                 <div class="content"><img src="assets/images/kontratat.jpg" alt=""></div>
             </div>
             <div class="gallery-item">
+                <div class="content"><img src="assets/images/building-strong-communities.jpg" alt=""></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="assets/images/123mobile.jpg" alt=""></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="assets/images/employagility.png" alt=""></div>
+            </div>
+            <div class="gallery-item">
+                <div class="content"><img src="assets/images/ctt-2.jpg" alt=""></div>
+            </div>
+            <div class="gallery-item">
                 <div class="content"><img src="assets/images/oe1.jpg" alt=""></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,substance" alt=""></div>
+                <div class="content"><img src="assets/images/unterstuetze.png" alt=""></div>
             </div>
             <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,choose" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,past" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,lamp" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,yet" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,eight" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,crew" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,event" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,instrument" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,practical" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,pass" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,bigger" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,number" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,feature" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,line" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,railroad" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,pride" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,too" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,bottle" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,base" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,cell" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,bag" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="https://source.unsplash.com/random/?tech,card" alt=""></div>
+                <div class="content"><img src="assets/images/spartacus.png" alt=""></div>
             </div>
         </div>
         </div>
