--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -23,3 +23,9 @@
     background-color: transparent;
     outline: none;
 }
+#note {
+    position: absolute;
+    left: 1300px;
+    top: 205vh;
+    color: #ffffff;
+}
