--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
 
+html {scroll-behavior: smooth;}
+
 body {
     font-family: 'Livvic', sans-serif;
     background: #1d1d1d;
