change project display, add style variables, responsive

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,10 +1,11 @@
 <div class="about-me" id="about">
     <div class="container">
         <div class="row">
-            <canvas id="canvas">
-            </canvas>
-            <div class="col-md-5"></div>
-            <div class="col-md-7 title-row">
+            <div class="col-sm-12 col-md-12 col-lg-5">
+                <canvas id="canvas">
+                </canvas>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-7 title-row">
                 <h1 class="about-me-title">About me</h1>
                 <p>Well-organised person, problem solver. Always searching for new and exciting technologies. Fan of football, outdoor activities, TV series and video games.</p>
                 <p>Interested in the entire frontend spectrum and working on ambitious projects with positive people.</p>
@@ -15,4 +16,3 @@
         </div>
     </div>
 </div>
-<p id="note">Click and drag or scroll inside the cube.</p>
