--- a/src/app/my-work/my-work.component.html
+++ b/src/app/my-work/my-work.component.html
@@ -1,33 +1,46 @@
 <div class="my-work" id="work">
     <div class="row">
         <div class="col-md-12">
-            <h1 class="title">My work</h1>
-            <div class="gallery" id="gallery">
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/kontratat.jpg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/building-strong-communities.jpg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/123mobile.jpg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/employagility.png" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/ctt-2.jpg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/oe1.jpg" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/unterstuetze.png" alt=""></div>
-            </div>
-            <div class="gallery-item">
-                <div class="content"><img src="assets/images/spartacus.png" alt=""></div>
-            </div>
-        </div>
+			<h1 class="title">My work</h1>
+			
+			<div id="carousel">
+
+				<div class="hideLeft">
+				 <img src="assets/images/building.jpg">
+				 <p class="project_name"><a href="https://opendatakosovo.org/portfolio/building-strong-resilient-communities-in-mitrovica/" target="_blank">BSRCM</a></p>
+			   </div>
+			
+			   <div class="prevLeftSecond">
+				 <img src="assets/images/employ-agility.png">
+				 <p class="project_name"><a href="https://employagility.ch/" target="_blank">EmployAgility</a></p>
+			   </div>
+			
+			   <div class="prev">
+				 <img src="assets/images/123mobile.jpg">
+				 <p class="project_name"><a href="https://app.123mobile.ch/" target="_blank">123mobile</a></p>
+			   </div>
+			
+			   <div class="selected">
+				 <img src="assets/images/kontratat.jpg">
+				 <p class="project_name"><a href="https://kontratat.rks-gov.net/prishtine/en" target="_blank">Open Contracts</a></p>
+			   </div>
+			
+			   <div class="next">
+				 <img src="assets/images/unterstutze.png">
+				 <p class="project_name"><a href="https://unterstuetze.ch/de" target="_blank">Unterstütze</a></p>
+			   </div>
+			
+			   <div class="nextRightSecond">
+				 <img src="assets/images/oek1.jpg">
+				 <p class="project_name"><a href="https://www.aap-oek.org/" target="_blank">Platform for professional practice</a></p>
+			   </div>
+			
+			   <div class="hideRight">
+				 <img src="assets/images/ctt.jpg">
+				 <p class="project_name"><a href="https://opendatakosovo.org/portfolio/countering-through-technology/" target="_blank">Countering Through Technology</a></p>
+			   </div>
+			
+			 </div>
         </div>
     </div>
 </div>
