--- a/src/app/landing-banner/landing-banner.component.html
+++ b/src/app/landing-banner/landing-banner.component.html
@@ -1,6 +1,9 @@
 <div class="wrapper" id="home">
     <div class="info">
-        <h1 class="name">{{typewriter_display }}</h1>
+        <h1 class="home-title">
+            <span>Hi, I'm Leutrim Kosumi.</span>
+            <span>I'm a front-end developer.</span>
+          </h1>
         <div class="box-area">
             <div class="box first-side" (click)="scrollToAbout()"><span class="view-work-txt">View my work</span> <i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
             <div class="box second-side" (click)="scrollToAbout()"><span class="view-work-txt">Let's GO!</span> <i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
