--- a/src/app/landing-banner/landing-banner.component.scss
+++ b/src/app/landing-banner/landing-banner.component.scss
@@ -1,21 +1,19 @@
-@import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
+@import "~src/assets/scss/variables";
 
 .wrapper {
     font-family: 'Livvic', sans-serif;
-    background-color: #1d1d1d;
+    background-color: $background-primary-color;
     min-height: 100vh;
     .info {
         position: absolute;
-        top: 40%;
+        top: 35%;
         left: 37%;
         z-index:99;
         color: #fff;
         text-align: center;
         text-transform: uppercase;
-        .name {
-            font-size: 40px;
-            width: 475px;
-            height: 145px;
+        .my-name {
+            color: #08fdd8;
         }
         .box-area {
             position: relative;
@@ -66,4 +64,106 @@
             transform: rotateX(-90deg) translateY(60px);
         }        
     }
+}
+
+@media(max-width: 1440px) {
+    .wrapper {
+        .info {
+            left: 32%;
+        } 
+    } 
+}
+
+@media(max-width: 1024px) {
+    .wrapper {
+        .info {
+            left: 22%;
+        } 
+    } 
+}
+
+@media(max-width: 768px) {
+    .wrapper {
+        .info {
+            left: 23%;
+            h1 {
+                font-size: 30px;
+            }
+            .box-area {
+                width: 260px;
+            }
+        } 
+    } 
+}
+
+@media(max-width: 425px) {
+    .wrapper {
+        .info {
+            left: 2%;
+        } 
+    } 
+}
+
+@media(max-width: 375px) {
+    .wrapper {
+        .info {
+            left: 0;
+        } 
+    } 
+}
+
+h1 {
+    font-size: 40px;
+}
+
+/* title styles */
+.home-title span{
+    position: relative;
+    overflow: hidden;
+    display: block;
+    line-height: 1.2;
+}
+
+.home-title span::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #08fdd8;
+    animation: a-ltr-after 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(-101%);
+}
+
+.home-title span::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #08fdd8;
+    animation: a-ltr-before 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(0);
+}
+
+.home-title span:nth-of-type(1)::before,
+.home-title span:nth-of-type(1)::after{
+    animation-delay: 1s;
+}
+
+.home-title span:nth-of-type(2)::before,
+.home-title span:nth-of-type(2)::after{
+    animation-delay: 1.5s;
+}
+
+@keyframes a-ltr-after{
+    0% {transform: translateX(-100%)}
+    100% {transform: translateX(101%)}
+}
+
+@keyframes a-ltr-before{
+    0% {transform: translateX(0)}
+    100% {transform: translateX(200%)}
 }
