--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -1,10 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
+@import "~src/assets/scss/variables";
+
 .my-work {
     font-family: 'Livvic', sans-serif;
     min-height: 100vh;
     padding: 10% 0;
-    background-color: #1d1d1d;
-    color: #ffffff;
+    background-color: $background-primary-color;
+    color: $white;
     .title {
       text-align: center;
       color: #08fdd8;
@@ -25,66 +26,66 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-  }
-  .full .content {
+}
+.full .content {
     background-color: rgba(0,0,0,0.75) !important;
     height: 100%;
     width: 100%;
     display: grid;
-  }
-  .full .content img {
+}
+.full .content img {
     left: 50%;
     transform: translate3d(0, 0, 0);
     animation: zoomin 1s ease;
     max-width: 100%;
     max-height: 100%;
     margin: auto;
-  }
-  .byebye {
+}
+.byebye {
     opacity: 0;
-  }
-  .byebye:hover {
+}
+.byebye:hover {
     transform: scale(0.2) !important;
-  }
-  .gallery {
+}
+.gallery {
     display: grid;
     grid-column-gap: 8px;
     grid-row-gap: 8px;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: 8px;
-  }
-  .gallery img {
+}
+.gallery img {
     max-width: 100%;
     border-radius: 8px;
     box-shadow: 0 0 16px #333;
     transition: all 1.5s ease;
-  }
-  .gallery img:hover {
+}
+.gallery img:hover {
     box-shadow: 0 0 32px #333;
-  }
-  .gallery .content {
+}
+.gallery .content {
     padding: 4px;
-  }
-  .gallery .gallery-item {
+}
+.gallery .gallery-item {
     transition: grid-row-start 300ms linear;
     transition: transform 300ms ease;
     transition: all 0.5s ease;
     cursor: pointer;
-  }
-  .gallery .gallery-item:hover {
+}
+.gallery .gallery-item:hover {
     transform: scale(1.025);
-  }
-  @media (max-width: 600px) {
+}
+@media (max-width: 600px) {
     .gallery {
       grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
     }
-  }
-  @media (max-width: 400px) {
+}
+@media (max-width: 400px) {
     .gallery {
       grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
     }
-  }
-  @-moz-keyframes zoomin {
+}
+@-moz-keyframes zoomin {
     0% {
       max-width: 50%;
       transform: rotate(-30deg);
@@ -102,8 +103,8 @@
       max-width: 100%;
       transform: rotate(0deg);
     }
-  }
-  @-webkit-keyframes zoomin {
+}
+@-webkit-keyframes zoomin {
     0% {
       max-width: 50%;
       transform: rotate(-30deg);
@@ -121,8 +122,8 @@
       max-width: 100%;
       transform: rotate(0deg);
     }
-  }
-  @-o-keyframes zoomin {
+}
+@-o-keyframes zoomin {
     0% {
       max-width: 50%;
       transform: rotate(-30deg);
@@ -140,8 +141,8 @@
       max-width: 100%;
       transform: rotate(0deg);
     }
-  }
-  @keyframes zoomin {
+}
+@keyframes zoomin {
     0% {
       max-width: 50%;
       transform: rotate(-30deg);
@@ -159,5 +160,198 @@
       max-width: 100%;
       transform: rotate(0deg);
     }
-  }
+}
   
+#carousel {
+	position: relative;
+	height: 400px;
+	top: 50%;
+	transform: translateY(-50%);
+	overflow: hidden;
+}
+#carousel div {
+	position: absolute;
+	transition: transform 1s, left 1s, opacity 1s, z-index 0s;
+	opacity: 1;
+}
+#carousel div img {
+	width: 375px;
+	transition: width 1s;
+}
+#carousel div.hideLeft {
+	left: 0%;
+	opacity: 0;
+	transform: translateY(50%) translateX(-50%);
+}
+#carousel div.hideLeft img {
+	width: 200px;
+}
+#carousel div.hideRight {
+	left: 100%;
+	opacity: 0;
+	transform: translateY(50%) translateX(-50%);
+}
+#carousel div.hideRight img {
+	width: 200px;
+}
+#carousel div.prev {
+	z-index: 5;
+	left: 30%;
+	transform: translateY(50px) translateX(-50%);
+}
+#carousel div.prev img {
+	width: 300px;
+}
+#carousel div.prevLeftSecond {
+	z-index: 4;
+	left: 15%;
+	transform: translateY(50%) translateX(-50%);
+	opacity: 0.7;
+}
+#carousel div.prevLeftSecond img {
+	width: 200px;
+}
+#carousel div.selected {
+	z-index: 10;
+	left: 50%;
+	transform: translateY(0px) translateX(-50%);
+}
+#carousel div.next {
+	z-index: 5;
+	left: 70%;
+	transform: translateY(50px) translateX(-50%);
+}
+#carousel div.next img {
+	width: 300px;
+}
+#carousel div.nextRightSecond {
+	z-index: 4;
+	left: 85%;
+	transform: translateY(50%) translateX(-50%);
+	opacity: 0.7;
+}
+#carousel div.nextRightSecond img {
+	width: 200px;
+}
+.project_name {
+	  display: none;
+}
+.selected .project_name {
+	transition: 1s;
+	display: block;
+	text-align: center;
+}
+
+@media (min-width: 320px) {
+  #carousel {
+      div img {
+        width: 250px;
+      }
+      div.hideLeft {
+        img {
+          width: 125px;
+        }
+      }
+      div.prev {
+        img {
+          width: 150px;
+        }
+      }
+      div.next {
+        img {
+          width: 150px;
+        }
+      }
+      div.nextRightSecond {
+        img {
+          width: 125px;
+        }
+      }
+      div.prevLeftSecond {
+        img {
+          width: 125px;
+        }
+      }
+  } 
+}
+
+@media (max-width: 768px) {
+  .my-work {
+    .title {
+      font-size: 45px;
+      text-align: center;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  #carousel {
+      div img {
+        width: 275px;
+      }
+      div.hideLeft {
+        img {
+          width: 175px;
+        }
+      }
+      div.prev {
+        img {
+          width: 200px;
+        }
+      }
+      div.next {
+        img {
+          width: 200px;
+        }
+      }
+      div.nextRightSecond {
+        img {
+          width: 175px;
+        }
+      }
+      div.prevLeftSecond {
+        img {
+          width: 175px;
+        }
+      }
+  } 
+}
+
+@media (min-width: 1024px) {
+  #carousel {
+      div img {
+        width: 375px;
+      }
+      div.hideLeft {
+        img {
+          width: 225px;
+        }
+      }
+      div.prev {
+        img {
+          width: 250px;
+        }
+      }
+      div.next {
+        img {
+          width: 250px;
+        }
+      }
+      div.nextRightSecond {
+        img {
+          width: 225px;
+        }
+      }
+      div.prevLeftSecond {
+        img {
+          width: 225px;
+        }
+      }
+  } 
+}
+
+@media (max-width: 600px) {
+  .my-work {
+      padding-top: 23%;
+  }
+}
