--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,15 +3,14 @@
         <div class="row">
             <canvas id="skillscanvas">
             </canvas>
-            <div class="col-md-7 title-row">
+            <div class="col-md-12 col-lg-7 title-row">
                 <h1 class="skills-title">Skills & Experience</h1>
                 <p>My focus is front end development known as the client side of the web.</p>
                 <p>HTML, CSS, JavaScript, TypeScript, building small and medium web apps with Angular 2+, features and animations.</p>
                 <p>I have worked also as a full-stack developer using MEAN stack (MongoDB, Express.js, Angular, Node.js).</p>
                 <p>Visit my <a href="https://www.linkedin.com/in/leutrimkosumi/" target="_blank">LinkedIn</a> profile or <a href="#">contact me</a>.</p>
             </div>
-            <div class="col-md-5"></div>
+            <div class="col-md-12 col-lg-5"></div>
         </div>
     </div>
 </div>
-<p id="note">Click and drag or scroll inside the animation.</p>
