--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,11 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
+@import "~src/assets/scss/variables";
+
 .skills {
     font-family: 'Livvic', sans-serif;
     min-height: 100vh;
     padding: 10% 0;
     padding-bottom: 5%;
-    background-color: #1d1d1d;
-    color: #ffffff;
+    background-color: $background-primary-color;
+    color: $white;
     .title-row {
         .skills-title {
             margin: 0 auto;
@@ -19,13 +20,43 @@
 #skillscanvas {
     position: absolute;
     left: 1045px;
-    top: 210vh;
+    top: 220vh;
     background-color: transparent;
     outline: none;
 }
-#note {
-    position: absolute;
-    left: 1300px;
-    top: 205vh;
-    color: #ffffff;
+
+@media (max-width: 1440px) {
+    #skillscanvas {
+        left: 920px;
+        top: 240vh;
+    }
 }
+
+@media (max-width: 1024px) {
+    #skillscanvas {
+        left: 608px;
+        top: 230vh;
+        width: 415px !important;
+        height: 415px !important;
+    }
+}
+@media (max-width: 768px) {
+    #skillscanvas {
+        display: none;
+    }
+    .skills {
+        .title-row {
+            text-align: center;
+            .skills-title {
+                font-size: 45px;
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .skills {
+        padding-top: 23%;
+    }
+  }
