--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -10,7 +10,7 @@
     .title-row {
         .skills-title {
             margin: 0 auto;
-            color: #08fdd8;
+            color: $primary-color;
             font-weight: 400;
             font-size: 60px;
             padding-bottom: 30px;
