--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,6 +1,1 @@
-@font-face {
-    font-family: 'Livvic', sans-serif;
-    src: url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
-    font-weight: normal;
-    font-style: normal;
-}
+@import url(https://fonts.googleapis.com/css?family=Livvic&display=swap);
