--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,4 +4,5 @@
 $primary-color: #08fdd8;
 $background-primary-color: #1d1d1d;
 $background-secondary-color: #181818;
+$background-third-color: #2b2b2b;
 $white: #ffffff;
