--- a/src/app/landing-banner/landing-banner.component.scss
+++ b/src/app/landing-banner/landing-banner.component.scss
@@ -9,11 +9,11 @@
         top: 35%;
         left: 37%;
         z-index:99;
-        color: #fff;
+        color: $white;
         text-align: center;
         text-transform: uppercase;
         .my-name {
-            color: #08fdd8;
+            color: $primary-color;
         }
         .box-area {
             position: relative;
@@ -44,17 +44,17 @@
             }
             .first-side {
                 background-color: transparent;
-                border: 3px solid #08fdd8;
-                color: #08fdd8;
+                border: 3px solid $primary-color;
+                color: $primary-color;
                 transform: translateZ(40px);
                 text-transform: uppercase;
                 cursor: pointer;
             }
             
             .second-side {
-                color: #08fdd8;
+                color: $primary-color;
                 background-color: transparent; 
-                border: 3px solid #08fdd8;
+                border: 3px solid $primary-color;
                 transform: rotateX(90deg) translateZ(40px);
                 text-transform: uppercase;
                 cursor: pointer;
@@ -131,7 +131,7 @@ h1 {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #08fdd8;
+    background: $primary-color;
     animation: a-ltr-after 2s cubic-bezier(.77,0,.18,1) forwards;
     transform: translateX(-101%);
 }
@@ -143,7 +143,7 @@ h1 {
     right: 0;
     width: 100%;
     height: 100%;
-    background: #08fdd8;
+    background: $primary-color;
     animation: a-ltr-before 2s cubic-bezier(.77,0,.18,1) forwards;
     transform: translateX(0);
 }
