--- a/src/app/my-work/my-work.component.scss
+++ b/src/app/my-work/my-work.component.scss
@@ -8,7 +8,7 @@
     color: $white;
     .title {
       text-align: center;
-      color: #08fdd8;
+      color: $primary-color;
       font-weight: 400;
       font-size: 60px;
       padding-bottom: 30px;
