--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
     background: $background-primary-color;
 }
 a {
-    color: #08fdd8 !important;
+    color: $primary-color !important;
 }
 .alertify-notifier .ajs-message {
     background-color: rgba(0,0,0,.9) !important;
