fix scroll to component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <a>Projects</a>
-  <a>Contact</a>
+  <a (click)="onScrollToAnchor('projects')">Projects</a>
+  <a (click)="onScrollToAnchor('contact')">Contact</a>
 </nav>
